@@ -4,6 +4,8 @@ htmltools 0.2.5
 * Explicit library(htmltools) is no longer required for tags to be rendered in 
   knitr/rmarkdown documents.
 
+* Added "viewer" parameter to html_print.
+
 
 htmltools 0.2.4
 --------------------------------------------------------------------------------
